--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ ol {
 }
 
 .btn:hover {
-  background-color: #e7816b;
+  background-color: #ffad9b;
   color: white;
 }
 
@@ -148,9 +148,11 @@ ol {
 
 /* Main  */
 /* Hero section */
-
+.hero__container {
+  margin-bottom: 60px;
+}
 .hero__background {
-  height: 100vh;
+  padding: 40px 40px 0 40px;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -168,4 +170,223 @@ ol {
   display: flex;
   flex-direction: column;
   align-items: start;
+}
+
+.hero__title {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 1;
+  color: white;
+  margin-bottom: 32px;
+}
+
+.hero__text {
+  max-width: 420px;
+  width: 100%;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.6;
+  color: white;
+  margin-bottom: 40px;
+}
+
+.hero__background img {
+  width: 410px;
+  height: 590px;
+  border-radius: 16px;
+  object-fit: cover;
+}
+
+/* Media */
+
+@media (max-width: 940px) {
+  .hero__background {
+    padding-top: 60px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 12px;
+  }
+
+  .hero__content {
+    align-items: center;
+    text-align: center;
+  }
+
+  .hero__background img {
+    margin-bottom: -120px;
+  }
+}
+
+@media (max-width: 600px) {
+  .hero__title {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 1.125;
+    margin-bottom: 14px;
+  }
+
+  .hero__text {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 1.6;
+    margin-bottom: 24px;
+  }
+
+  .hero__background img {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+/* Projects */
+.projects {
+  padding-top: 80px;
+}
+
+.projects__container {
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-areas:
+    "webd appd"
+    "webd graphicd";
+  column-gap: 30px;
+  row-gap: 24px;
+  padding-bottom: 60px;
+}
+
+.projects__link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.projects__link:nth-child(1) {
+  grid-area: webd;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/webDesign.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 16px;
+}
+
+.projects__link:nth-child(1):hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(../images/webDesign.png);
+}
+
+.projects__link:nth-child(1):active {
+  background-image: linear-gradient(
+      rgba(231, 129, 107, 0.5),
+      rgba(231, 129, 107, 0.5)
+    ),
+    url(../images/webDesign.png);
+}
+
+.projects__link:nth-child(2) {
+  grid-area: appd;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/appDesign.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 16px;
+}
+
+.projects__link:nth-child(2):hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(../images/appDesign.png);
+}
+
+.projects__link:nth-child(2):active {
+  background-image: linear-gradient(
+      rgba(231, 129, 107, 0.5),
+      rgba(231, 129, 107, 0.5)
+    ),
+    url(../images/appDesign.png);
+}
+
+.projects__link:nth-child(3) {
+  grid-area: graphicd;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(../images/gaphicDesign.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 16px;
+}
+
+.projects__link:nth-child(3):hover {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+    url(../images/gaphicDesign.png);
+}
+
+.projects__link:nth-child(3):active {
+  background-image: linear-gradient(
+      rgba(231, 129, 107, 0.5),
+      rgba(231, 129, 107, 0.5)
+    ),
+    url(../images/gaphicDesign.png);
+}
+
+.projects__title {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: 2px;
+  color: #ffffff;
+  margin-bottom: 24px;
+}
+
+.projects__text {
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 100%;
+  letter-spacing: 5px;
+  color: #ffffff;
+}
+
+.projects__text span {
+  display: none;
+}
+
+@media (max-width: 920px) {
+  .projects__container {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "webd"
+      "appd"
+      "graphicd";
+    margin-bottom: 60px;
+  }
+
+  .projects__link {
+    padding: 53px 0;
+  }
+}
+
+@media (max-width: 550px) {
+  .projects__title {
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 1.3;
+    letter-spacing: 1.4px;
+  }
+
+  .projects__text {
+    display: flex;
+    gap: 20px;
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 100%;
+    letter-spacing: 5px;
+  }
+
+  .projects__text span {
+    display: block;
+    color: #e7816b;
+    font-size: 15px;
+  }
 }
