--- a/css/style.css
+++ b/css/style.css
@@ -390,3 +390,112 @@ ol {
     font-size: 15px;
   }
 }
+
+/* workInfo */
+.workInfo {
+  padding-top: 90px;
+  padding-bottom: 90px;
+}
+
+.workInfo__container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.workInfo__boxes {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.workInfo__boxes__img {
+  width: 202px;
+  height: 202px;
+  border-radius: 50%;
+  margin-bottom: 40px;
+}
+
+.boxes__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.workInfo__boxes__title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 5px;
+  margin-bottom: 30px;
+  color: #333136;
+}
+
+.workInfo__boxes__text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+  max-width: 350px;
+  width: 100%;
+}
+
+@media (max-width: 950px) {
+  .workInfo__container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 32px;
+    flex-wrap: wrap;
+  }
+
+  .workInfo__boxes {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 48px;
+  }
+  .boxes__content {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .workInfo__boxes__title {
+    margin-bottom: 15px;
+  }
+
+  .workInfo__boxes__text {
+    max-width: 440px;
+    width: 100%;
+    text-align: start;
+  }
+}
+
+@media (max-width: 590px) {
+  .workInfo__container {
+    gap: 80px;
+  }
+
+  .workInfo__boxes {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  .boxes__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .workInfo__boxes__text {
+    max-width: 440px;
+    width: 100%;
+    text-align: center;
+  }
+}
