--- a/css/style.css
+++ b/css/style.css
@@ -590,13 +590,128 @@ ol {
 .footer {
   background-color: #1d1c1e;
   color: white;
+  padding-bottom: 65px;
 }
 
 .footer__head {
-  padding-top: 150px;
+  padding-top: 130px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
+.footer__head__list {
+  display: flex;
+  align-items: center;
+  gap: 42px;
+}
 
+.footer__head__link {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1;
+  letter-spacing: 2px;
+  color: #ffffff;
+}
+
+.footer__head__link:hover {
+  text-decoration: underline;
+  color: #e7816b;
+}
+
+.footer__head__link:active {
+  opacity: 0.6;
+}
+
+.footer__hr {
+  height: 1px;
+  margin-top: 40px;
+  margin-bottom: 30px;
+  opacity: 0.3;
+}
+
+.footer__hidden__hr {
+  display: none;
+}
+
+.footer__banner {
+  display: flex;
+  align-items: end;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.footer__banner__listBox {
+  max-width: 550px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.footer__banner__list {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: rgb(138, 129, 129);
+}
+
+.bold {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.footer__social__list {
+  display: flex;
+  align-items: end;
+  gap: 16px;
+}
+
+@media (max-width: 680px) {
+  .footer__head {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .footer__head img {
+    margin-bottom: 32px;
+  }
+
+  .footer__head__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+  }
+
+  .footer__hr {
+    display: none;
+  }
+
+  .footer__hidden__hr {
+    height: 1px;
+    width: 100%;
+    display: block;
+    opacity: 0.2;
+    margin-bottom: 32px;
+  }
+
+  .footer__banner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+
+  .footer__banner__listBox {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 40px;
+    gap: 40px;
+  }
+}
