--- a/css/about.css
+++ b/css/about.css
@@ -1,20 +1,45 @@
-/* 
-
-.about__hero__content {
-  width: 65%;
-  padding: 135px 90px;
+.about__container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
   background-color: rgba(231, 129, 107, 1);
-  color: white;
+  border-radius: 0 15px 15px 0;
   background-image: url(../images/aboutHeroOval.png);
   background-repeat: no-repeat;
-  background-position: center right;
-  border-radius: 16px 0 0 16px;
+  background-size: contain;
+  background-position: top left;
 }
 
-.about__hero__bg {
-  width: 35%;
-  background-image: url(../images/aboutHeroBG.jpg);
+.about__content {
+  max-width: 700px;
+  width: 100%;
+  padding: 130px 90px;
+  border-radius: 15px 0 0 15px;
+}
+
+.about__title {
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 1;
+  color: rgba(255, 255, 255, 1);
+  margin-bottom: 32px;
+}
+
+.about__text {
+  max-width: 450px;
+  width: 100%;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: rgba(255, 255, 255, 1);
+}
+
+.about__back__img {
+  max-width: 560px;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../images/aboutHeroBG.png);
   background-repeat: no-repeat;
   background-size: cover;
-  border-radius: 0 16px 16px 0;
-}  */
+  border-radius: 0 15px 15px 0;
+}
