--- a/css/about.css
+++ b/css/about.css
@@ -224,3 +224,112 @@
     line-height: 1.5;
   }
 }
+
+/* Deal section styles */
+.deal {
+  padding-top: 80px;
+  /* padding-bottom: 80px; */
+}
+
+.deal__container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 40px;
+  border-radius: 15px;
+  margin-bottom: 50px;
+  background-color: #fdf3f0;
+}
+
+.deal__content {
+  max-width: 445px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+
+.deal__title {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.2;
+  color: #e7816b;
+  margin-bottom: 24px;
+}
+
+.deal__text,
+.deal__secondText {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333136;
+}
+
+.deal__text {
+  margin-bottom: 25px;
+}
+
+.deal__backImg {
+  max-width: 520px;
+  width: 100%;
+  height: 100vh;
+  background-image: url(../images/dealWeb.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 0 15px 15px 0;
+}
+
+/* Media */
+@media (max-width: 1000px) {
+  .deal__container {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  .deal__backImg {
+    max-width: 100%;
+    height: 400px;
+    background-image: url(../images/dealTablet.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 15px 15px 0 0;
+    margin-bottom: 60px;
+  }
+
+  .deal__content {
+    max-width: 550px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin-bottom: 90px;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
+  }
+}
+
+@media (max-width: 670px) {
+  .deal__backImg {
+    background-image: url(../images/dealMobile.jpg);
+    background-repeat: no-repeat;
+    background-size: center;
+    background-position: center;
+    margin-bottom: 60px;
+  }
+
+  .deal__title {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 1.1;
+  }
+
+  .deal__text {
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 1.5;
+  }
+}
